Upgrade to Quarkus 3.8.5